conan create failed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,7 +178,7 @@ else(CCTAG_WITH_CUDA)
 endif(CCTAG_WITH_CUDA)
 
 # FIND OPENCV
-find_package(opencv REQUIRED core videoio imgproc imgcodecs)
+find_package(OpenCV REQUIRED core videoio imgproc imgcodecs)
 
 # FIND Eigen
 find_package(Eigen3 REQUIRED)
